--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.2",
+    "@types/throttle-debounce": "^2.1.0",
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.13.1",
@@ -20,6 +21,7 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "styled-components": "^5.1.1",
+    "throttle-debounce": "^2.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
