--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@types/styled-components": "^5.1.2",
     "@types/throttle-debounce": "^2.1.0",
     "react": "^16.13.1",
-    "react-addons-update": "^15.6.2",
+    "react-addons-update": "^15.6.3",
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.1",
@@ -46,6 +46,17 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1",
     "redux-devtools-extension": "^2.13.8"
   }
 }
