--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,9 +1,15 @@
-FROM rust:1.43
+FROM rust
 
-RUN mkdir -p /server
 WORKDIR /server
 
-COPY -r src/ /server
-COPY Cargo.* /server
+# install dependencies seperately for caching
+# COPY "Cargo.toml" .
+# RUN echo "fn main() {}" > dummy.rs
+# RUN sed -i 's#src/main.rs#dummy.rs#' Cargo.toml
+# RUN cargo build
+# RUN sed -i 's#dummy.rs#src/main.rs#' Cargo.toml
+
+# copy files
+COPY . .
 
 CMD "cargo" "run"
