update docker-compose, readme, .env

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
-POSTGRES_USER=mydb
-POSTGRES_PASSWORD=changeme
-POSTGRES_DB=mydb
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=postgres
 DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@127.0.0.1:5432/${POSTGRES_DB}"
 REDIS_URL="redis://127.0.0.1:6379/"
 JWT_SECRET="ITS A SECRET"
