--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ data/
 .env.development.local
 .env.test.local
 .env.production.local
+# include sample
+!.env.sample
 
 npm-debug.log*
 yarn-debug.log*
