--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,7 @@ data/
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
 # include sample
 !.env.sample
 
