got graphql server running

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,9 +19,9 @@ services:
       - ./api:/api
     env_file:
       - ./.env.dev
-    # environment:
-    #   RUST_LOG: info
-    #   DATABASE_URL: postgres://mydb:changeme@db:5432/mydb
+    environment:
+      RUST_LOG: info
+      DATABASE_URL: postgres://postgres:postgres@db:5432/postgres
     #   REDIS_URL: redis://cache:6379/
     #   JWT_SECRET: ITS A SECRET
     #   ARGON_SECRET: ITS ANOTHER SECRET
@@ -38,6 +38,7 @@ services:
       - 5432:5432
     volumes:
       - ./data:/var/lib/postgresql/data
+      - ./migrations/up:/docker-entrypoint-initdb.d/
     env_file:
       - ./.env.dev
     # environment:
@@ -51,3 +52,9 @@ services:
     ports:
       - 6379:6379
     restart: always
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
