--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "warp-api-starter-template"
+name = "holdemsolver-api"
 version = "0.1.0"
-authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
+authors = ["Kyle Murphy <kwmurph2@asu.edu>"]
 edition = "2018"
 
 # [[bin]]
@@ -13,7 +13,7 @@ anyhow = "1.0.34"
 thiserror = "1.0.20"
 clap = "3.0.0-beta.2"
 dotenv = "0.15.0"
-tracing = "0.1.15"
+tracing = "0.1.16"
 tracing-subscriber = "0.2.15"
 serde = "1.0.114"
 serde_json = "1.0.59"
