--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-addons-update": "^0.14.20",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.2",
     "@types/throttle-debounce": "^2.1.0",
     "react": "^16.13.1",
@@ -19,8 +20,10 @@
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
   },
